[package]
name = "arm64"
version = "0.1.0"
edition = "2024"

[features]
critical-section = []
cortex-a53 = []

[dependencies]
entry-macro = { path = "macros/entry", features = ["arm64"] }
cfg-asm = { path = "../macros/cfg-asm" }

arbitrary-int = { version = "1.3.0" }
bitbybit = { git = "ssh://git@github.com/moritz-meier/bitfield.git", branch = "field-metadata", features = [
    "introspect",
] }
critical-section = { version = "1.2.0" }
derive-mmio = "0.6.0"
pastey = { version = "*" }
