[package]
name = "arm64"
version = "0.1.0"
edition = "2024"

[features]
cortex-a53 = []

[dependencies]
entry-macro = { path = "macros/entry", features = ["arm64"] }
cfg-asm = { path = "../macros/cfg-asm" }

arbitrary-int = "1.3.0"
bitbybit = { version = "2.0.0", features = ["introspect"] }
derive-mmio = "0.6.0"
safe-mmio = "0.3.0"

pastey = "0.2.2"
