[package]
name = "example"
version = "0.1.0"
edition = "2024"

[features]
default = ["qemu"]
qemu = []
kr260 = []

[dependencies]
arm64 = { path = "../arm64", features = ["cortex-a53"] }

spin = { version = "0.10.0", default-features = false, features = [
    "spin_mutex",
    "once",
] }

embedded-hal-nb = "*"
log = "0.4.29"

sel4-pl011-driver = { git = "https://github.com/moritz-meier/rust-sel4.git", branch = "feat/zynqmp-support" }
sel4-zynqmp-xuartps-driver = { git = "https://github.com/moritz-meier/rust-sel4.git", branch = "feat/zynqmp-support" }

[build-dependencies]
quote = "1.0.40"
